sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
		var i:Int;
                    ^AlgBubbleSort1:8: error: type mismatch;
 found   : Boolean
 required: Int
		for(i <-0 to i<(getNombreValeurs()-1) by 1){
                              ^